[package]
name = "rup"
description = "rup is a universal pinger"
version = "0.1.0"
repository = "https://github.com/svart/rup"
authors = ["Dmitry Shinkaruk <dimashink@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "2.33", features = ["yaml"] }
# mio = { version = "0.7", features = ["os-poll", "net"] }
# icmp-socket = "0.1"
tokio = { version = "1", features = ["full"] }
clap = "4.1"
