[package]
name = "rup"
description = "rup is a universal pinger"
version = "0.2.0"
repository = "https://github.com/svart/rup"
authors = ["Dmitry Shinkaruk <dimashink@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
clap = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
