[package]
name = "rup"
description = "rup is a universal pinger"
version = "0.4.1"
repository = "https://github.com/svart/rup"
authors = ["Dmitry Shinkaruk <dimashink@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
clap = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync", "net", "io-util"] }
